1物品的展示，2物品的叠加，3、后端配置文件位置重新定义 接下来需要完成（物品的操作、装备系统，任务系统）

--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">染指天下</string>
+    <string name="app_name">对影江湖</string>
 
     <string name="game_bag">背包</string>
     <string name="game_map">地图</string>
