1、装备系统预备

--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="game_bag">背包</string>
     <string name="game_map">地图</string>
-    <string name="game_state">状态</string>
+    <string name="game_state">我的</string>
     <string name="game_chat">聊天</string>
 
     <string name="game_login_notice">账号密码必须5-16位长度英数。</string>
