--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="game_state">我的</string>
     <string name="game_chat">聊天</string>
     <string name="game_trade">交易</string>
+    <string name="game_skill">技能</string>
+
 
 
     <string name="game_login_notice">账号密码必须5-16位长度英数。</string>
